--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -1,14 +1,13 @@
-.login-container {
+.register-container {
     background-color: #f2f0f2;
     min-height: 100vh;
 
-    .box-login {
+    .box-register {
         margin-top: 100px;
 
         .content {
             padding: 50px;
             border-radius: 10px;
-            background-color: #187733;
             box-shadow: 0 2px 4px rgb(0 0 0/ 10%), 0 8px 16px rgb(0 0 0 / 10%);
             box-sizing: border-box;
         }
