--- a/src/components/Navigation/nav.scss
+++ b/src/components/Navigation/nav.scss
@@ -6,23 +6,155 @@ body {
 .topnav {
     overflow: hidden;
     background-color: #187733;
+    width: 100%;
 
-    a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
+    .topnav-content1 {
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        margin: 20px auto;
+        align-items: center;
+        justify-content: space-around;
+
+        .image-logo {
+            background: url(../../assets/images/ff-low-resolution-color-logo.png) center center no-repeat;
+            background-size: contain;
+            height: 100px;
+            width: 100px;
+            cursor: pointer;
+            text-decoration: none;
+            background-color: transparent;
+        }
+
+        .text-logo {
+            width: 130px;
+            font-weight: 700;
+            cursor: pointer;
+            color: #fff;
+        }
+
+        .search {
+            width: 45%;
+            display: block;
+            position: relative;
+            display: flex;
+            position: relative;
+
+            .input-search {
+                width: 100%;
+                border-radius: 4px;
+                padding: 9px;
+                background: #fff;
+                border: 0;
+                height: 40px;
+
+            }
+
+            .search-icon {
+                position: absolute;
+                right: 5px;
+                color: #54b859;
+                margin: 8px;
+                cursor: pointer;
+                font-size: 20px;
+                opacity: 0.5;
+            }
+        }
+
+        .cart {
+            background: #0e562e;
+            border-radius: 4px;
+            padding: 2px 10px;
+            display: flex !important;
+            align-items: center;
+            text-align: center;
+            vertical-align: middle;
+            height: 42px;
+            min-width: 150px;
+            justify-content: center;
+            cursor: pointer;
+
+            .shopping-icon {
+                font-size: 20px;
+                margin: 0 10px;
+                color: #fff;
+            }
+
+            .shopping-cart {
+                color: #fff;
+                padding: 3px 0px;
+                display: inline-block;
+                vertical-align: middle;
+                color: #ffffff;
+                text-align: center;
+                line-height: 14px;
+                font-size: 13px;
+            }
+        }
+
+        .login-register {
+
+            border-radius: 4px;
+            padding: 2px 10px;
+            display: flex !important;
+            align-items: center;
+            text-align: center;
+            vertical-align: middle;
+            height: 42px;
+            min-width: 250px;
+            justify-content: center;
+
+            .login {
+                background: #0e562e;
+                border-radius: 4px;
+                padding: 2px 10px;
+                text-decoration: none;
+                align-items: center;
+                height: 42px;
+                color: #fff;
+                display: flex;
+            }
+
+            .register {
+                background: #0e562e;
+                border-radius: 4px;
+                padding: 2px 20px;
+                text-decoration: none;
+                align-items: center;
+                height: 42px;
+                display: flex;
+                margin: 0 auto;
+                color: #fff;
+
+            }
+        }
     }
 
-    a:hover {
-        background-color: #ddd;
-        color: black;
-    }
+    .topnav-content2 {
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        margin: 3px auto;
+        align-items: center;
+        justify-content: space-around;
 
-    a.active {
-        background-color: #940505;
-        color: white;
+        a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        a.active {
+            background-color: #333;
+            color: white;
+        }
     }
 }
