--- a/src/components/Navigation/nav.scss
+++ b/src/components/Navigation/nav.scss
@@ -19,7 +19,7 @@ body {
             justify-content: space-around;
 
             .image-logo {
-                background: url(../../assets/images/ff-low-resolution-color-logo.png) center center no-repeat;
+                background: url(../../assets/images/logo.png) center center no-repeat;
                 background-size: contain;
                 height: 100px;
                 width: 100px;
