--- a/src/components/Admin/ManagerUsers/Products/Products.scss
+++ b/src/components/Admin/ManagerUsers/Products/Products.scss
@@ -2,3 +2,18 @@
     width: 100px;
     height: 100px;
 }
+
+
+/// Modal Products
+.form-image {
+    position: relative;
+
+    .check-image {
+        img {
+            width: 100px;
+            height: 100px;
+            margin: 10px;
+            image-rendering: pixelated;
+        }
+    }
+}
