--- a/src/components/Customer/Home.scss
+++ b/src/components/Customer/Home.scss
@@ -66,5 +66,14 @@
         img {
             border-radius: 20px;
         }
+
+
+        .card-title-product {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
     }
 }
