--- a/src/components/Navigation/nav.scss
+++ b/src/components/Navigation/nav.scss
@@ -191,7 +191,7 @@ body {
                     margin: 0;
 
                     a {
-                        color: #54b859;
+                        color: #000;
                     }
                 }
             }
