--- a/src/components/Customer/Cart.scss
+++ b/src/components/Customer/Cart.scss
@@ -1,29 +1,33 @@
-.cart-item {
-    max-width: 840px;
-    padding: 0 12px;
-    margin-top: 48px;
-}
+.container-cart {
+    min-height: 500px;
 
-.total-cost {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 15px;
-
-    .pay {
-        display: flex;
-        gap: 185px;
-        margin-bottom: 20px;
-        margin-top: 20px;
+    .cart-item {
+        max-width: 840px;
+        padding: 0 12px;
+        margin-top: 48px;
     }
 
-    .order {
-        padding: 10px;
-        background-color: #187733;
+    .total-cost {
+        border: 1px solid #ccc;
         border-radius: 10px;
-        color: #fff;
-        font-size: 18px;
-        text-align: center;
-        font-weight: 500;
-        cursor: pointer;
+        padding: 15px;
+
+        .pay {
+            display: flex;
+            gap: 185px;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+
+        .order {
+            padding: 10px;
+            background-color: #187733;
+            border-radius: 10px;
+            color: #fff;
+            font-size: 18px;
+            text-align: center;
+            font-weight: 500;
+            cursor: pointer;
+        }
     }
 }
