--- a/src/components/Customer/Home.scss
+++ b/src/components/Customer/Home.scss
@@ -75,5 +75,12 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
+
+        .add-cart {
+            padding: 10px 51px;
+            background-color: #5dac46;
+            border: 1px solid #5dac46;
+        }
+
     }
 }
