--- a/src/components/Navigation/nav.scss
+++ b/src/components/Navigation/nav.scss
@@ -96,6 +96,14 @@ body {
                 }
             }
 
+            .welcome-user {
+                color: #fff;
+                font-size: 20px;
+                font-weight: 500;
+            }
+
+            .dropdown-logout {}
+
             .login-register {
 
                 border-radius: 4px;
